缓存/主机监控
